--- a/Mod10HW/pom.xml
+++ b/Mod10HW/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>gson</artifactId>
             <version>2.8.5</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.lbovolini</groupId>
+            <artifactId>ObjectMapper</artifactId>
+            <version>0.2.3</version>
+        </dependency>
     </dependencies>
 
 </project>
